# MatrixFactory

./: .gitignore  CMakeLists.txt  README.md
include/: matrixConverter.h  matrixFormat.h  matrixMarketReader.h
include/detail/: complex.h  error.h  matrixInfo.h
test/: CMakeLists.txt  testMatrixReader.cc
